--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,6 +3,8 @@ owner: 0rangebananaspy # Your GitHub organization or username, where this reposi
 repo: io # The name of this repository
 
 sites:
+  - name: SLD
+    url: https://io.unej.id 
   - name: DNS 1
     check: "tcp-ping"
     url: 103.241.205.205
