--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -124,8 +124,8 @@ sites:
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: io.unej.id
-  # baseUrl: /your-repo-name
+  # cname: io.unej.id
+  baseUrl: /io
   logoUrl: https://raw.githubusercontent.com/0rangebananaspy/cdn/main/uploads/xammmm-1.png
   name: Status Layanan Digital
   introTitle: "**SLD** is the PWA uptime monitor and status page, built with Svelte and Sapper, powered entirely by GitHub. Created by t.me/orangebananaspy."
