--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,10 +1,27 @@
 # Change these first
 owner: 0rangebananaspy # Your GitHub organization or username, where this repository lives
 repo: io # The name of this repository
+user-agent: 0rangebananaspy
+status-website:
+  robotsText: "User-agent: * \n Disallow: /"
+status-website:
+  theme: dark
+status-website:
+  # Add your custom domain name, or remove the `cname` line if you don't have a domain
+  # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
+  cname: io.unej.id
+  # baseUrl: /io
+  logoUrl: https://raw.githubusercontent.com/0rangebananaspy/cdn/main/uploads/xammmm-1.png
+  name: Status Layanan Digital
+  introTitle: "**SLD** is the PWA uptime monitor and status page, built with Svelte and Sapper, powered entirely by GitHub. Created by t.me/orangebananaspy."
+  introMessage: SLD monitoring **real-time** data from our repository. All the services are accessed outside UNEJ network.
+  navbar:
+    - title: Status
+      href: /
+    - title: Ask me anything
+      href: https://t.me/orangebananaspy
 
 sites:
-  - name: SLD
-    url: http://io.unej.id 
   - name: DNS 205
     check: "tcp-ping"
     url: 103.241.205.205
@@ -30,6 +47,8 @@ sites:
     url: https://simkeu.unej.ac.id
   - name: SIREMUN
     url: https://siremun.unej.ac.id
+  - name: SEMMABA
+    url: https://semmaba.unej.ac.id
   - name: MMP
     url: https://mmp.unej.ac.id
   - name: E-SKP
@@ -120,21 +139,6 @@ sites:
     url: https://chrm2.unej.ac.id
   - name: CGS
     url: https://cgs.unej.ac.id
-
-status-website:
-  # Add your custom domain name, or remove the `cname` line if you don't have a domain
-  # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  # cname: io.unej.id
-  baseUrl: /io
-  logoUrl: https://raw.githubusercontent.com/0rangebananaspy/cdn/main/uploads/xammmm-1.png
-  name: Status Layanan Digital
-  introTitle: "**SLD** is the PWA uptime monitor and status page, built with Svelte and Sapper, powered entirely by GitHub. Created by t.me/orangebananaspy."
-  introMessage: SLD monitoring **real-time** data from our repository. All the services are accessed outside UNEJ network.
-  navbar:
-    - title: Status
-      href: /
-    - title: Ask me anything
-      href: https://t.me/orangebananaspy
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
