--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -6,18 +6,19 @@ user-agent: 0rangebananaspy
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
+  themeUrl: https://raw.githubusercontent.com/0rangebananaspy/cdn/main/uploads/io.css
   cname: io.unej.id
   robotsText: "User-agent: * \n Disallow: /"
-  theme: dark
+  theme: 
   # baseUrl: /io
-  logoUrl: https://raw.githubusercontent.com/0rangebananaspy/cdn/main/uploads/check.png
+  logoUrl: https://raw.githubusercontent.com/0rangebananaspy/cdn/main/uploads/tik-logo-header-192-1.webp
   name: Status Layanan Digital - Universitas Jember
-  introTitle: "**SLD** is the PWA uptime monitor for Universitas Jember. Built with Svelte and Sapper, powered entirely by GitHub. Created by t.me/orangebananaspy."
-  introMessage: SLD monitoring **real-time** data from our repository. All the tests is carried out using a network outside Universitas Jember.
+  introTitle: "**SLD** is the PWA uptime monitor for Universitas Jember. Built with Svelte and Sapper."
+  introMessage: SLD monitoring **real-time** data from our repo. All the tests is carried out using a network outside Universitas Jember.
   navbar:
-    - title: Join
+    - title: Join Channel
       href: https://t.me/tikunej
-    - title: Compare
+    - title: Compare Status
       href: https://isitdownorjustme.net/
   favicon: https://raw.githubusercontent.com/0rangebananaspy/cdn/main/uploads/check.png
   faviconSvg: https://raw.githubusercontent.com/0rangebananaspy/cdn/main/uploads/check.svg
@@ -148,6 +149,7 @@ sites:
     url: https://ce.svr.unej.ac.id
   - name: PocketBase
     url: https://pb.unej.id
-
+i18n:
+  footer: This SPA is [open source](https://io.unej.id), developed by [TIK UNEJ](https://tik.unej.ac.id) | Maintainer: Techies, Sugus, Kiplink, & MiminTI
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
