--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -17,11 +17,11 @@ status-website:
   name: Status Layanan Digital - Universitas Jember
   logoUrl: https://raw.githubusercontent.com/0rangebananaspy/cdn/main/uploads/tik-logo-header-192-1.webp
   introTitle: "**SLD** adalah aplikasi monitoring status layanan digital di Universitas Jember."
-  introMessage: SLD memonitoring layanan digital secara **real-time**. Proses pengecekan status dilakukan setiap 5 menit sekali. Dibuat dengan Svelte dan Sapper.
+  introMessage: Aplikasi ini memonitoring layanan digital secara **real-time**. Proses pengecekan status dilakukan setiap 5 menit sekali.
   navbar:
-    - title: Join Channel
+    - title: Join
       href: https://t.me/tikunej
-    - title: Compare Status
+    - title: Compare
       href: https://isitdownorjustme.net/
   favicon: https://raw.githubusercontent.com/0rangebananaspy/cdn/main/uploads/check.png
   faviconSvg: https://raw.githubusercontent.com/0rangebananaspy/cdn/main/uploads/check.svg
@@ -85,42 +85,10 @@ sites:
     url: https://oer.unej.ac.id
   - name: Taman Kebangsaan
     url: https://tamankebangsaan.unej.ac.id
-  - name: API-Mobile
-    check: "tcp-ping"
-    url: 103.241.205.85
-  - name: API-Akademik
-    check: "tcp-ping"
-    url: 103.241.205.114
-  - name: API-Auth
-    check: "tcp-ping"
-    url: 103.241.205.115
-  - name: API-MMP
-    check: "tcp-ping"
-    url: 103.241.205.116
-  - name: API-Helpdesk
-    check: "tcp-ping"
-    url: 103.241.205.117
-  - name: API-Clinic
-    check: "tcp-ping"
-    url: 103.241.205.118
-  - name: API-Study
-    check: "tcp-ping"
-    url: 103.241.205.120
-  - name: API-KRS
-    check: "tcp-ping"
-    url: 103.241.205.121
-  - name: API-Slims
-    check: "tcp-ping"
-    url: 103.241.205.122
-  - name: API-Services
-    check: "tcp-ping"
-    url: 103.241.205.24
   - name: Posko UTBK
     url: https://posko.unej.ac.id
   - name: Dashboard
     url: https://dashboard.unej.ac.id
-  - name: Data MBKM
-    url: https://datambkm.unej.ac.id
   - name: Klise
     url: https://klise.unej.ac.id
   - name: Assesor BKD
@@ -145,22 +113,20 @@ sites:
     url: https://qr.unej.ac.id
   - name: Eproc
     url: https://eproc.unej.ac.id
-  - name: ICOGEF PSG
-    url: https://icogef.psg.unej.ac.id
   - name: SIMULAN
     url: https://simulan.unej.ac.id
   - name: Neo Feeder 2023
     url: https://feeder.unej.ac.id
-  - name: GatewayNET
-    url: http://gw.unej.id
   - name: SRD
     url: https://srd.unej.ac.id
+  - name: Mobile-SIAKAD
+    url: https://mobile-siakad.unej.ac.id
+  - name: Mobile-SISTER
+    url: https://mobile-sister.unej.ac.id
   - name: CE & CP Server
     url: https://ce.svr.unej.ac.id
   - name: PocketBase
     url: https://pb.unej.id/_/#/login
 
 i18n:
-  footer: Aplikasi ini dibuat secara [open source](https://io.unej.id), oleh [UPA TIK](https://tik.unej.ac.id). Dikelola oleh Techies, Sugus, Kiplink, & MiminTI.
-# Upptime also supports notifications, assigning issues, and more
-# See https://upptime.js.org/docs/configuration
+  footer: Aplikasi ini dibuat menggunakan [Svelte](https://svelte.dev/) dan [Sapper](https://sapper.svelte.dev/) oleh [UPA TIK](https://tik.unej.ac.id). Dikelola oleh orangebananaspy, sugus, & kiplink.
